crates/toml/tests/snapshots/invalid/string/bad-multiline.stderr
TOML parse error at line 2, column 8
  |
2 | second line"
  |        ^
key with no value, expected `=`

---
TOML parse error at line 1, column 20
  |
1 | multi = "first line
  |                    ^
invalid basic string, expected `"`
